--- a/app/Src/EditScreen1.fx.yaml
+++ b/app/Src/EditScreen1.fx.yaml
@@ -362,39 +362,20 @@ EditScreen1 As screen:
             Height: =198
             MaxLength: =DataSourceInfo([@NewCampaign], DataSourceInfo.MaxLength, "Message_x0028_html_x0029_")
             Required: =false
-            Update: =DataCardValue9.Text
+            Update: =RichTextEditor2.HtmlText
             Width: =910
             X: =0
             Y: =5
             ZIndex: =4
 
             DataCardKey8 As label:
-                AutoHeight: =true
-                Height: =34
+                Height: =36
                 Text: =Parent.DisplayName
-                Width: =(Parent.Width - 60) * 0.4
+                Width: =178
                 Wrap: =false
                 X: =30
-                Y: =10 + (DataCardValue9.Height / 2) - (Self.Height / 2)
+                Y: =80
                 ZIndex: =1
-
-            DataCardValue9 As text:
-                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                Default: =Parent.Default
-                DelayOutput: =true
-                DisplayMode: =Parent.DisplayMode
-                Height: =167
-                MaxLength: =Parent.MaxLength
-                PaddingLeft: =5
-                RadiusBottomLeft: =0
-                RadiusBottomRight: =0
-                RadiusTopLeft: =0
-                RadiusTopRight: =0
-                Tooltip: =Parent.DisplayName
-                Width: =658
-                X: =222
-                Y: =13
-                ZIndex: =2
 
             ErrorMessage8 As label:
                 AutoHeight: =true
@@ -408,7 +389,7 @@ EditScreen1 As screen:
                 Visible: =Parent.DisplayMode=DisplayMode.Edit
                 Width: =Parent.Width - 60
                 X: =30
-                Y: =DataCardValue9.Y + DataCardValue9.Height
+                Y: =RichTextEditor2.Y + RichTextEditor2.Height
                 ZIndex: =3
 
             StarVisible8 As label:
@@ -420,6 +401,14 @@ EditScreen1 As screen:
                 Wrap: =false
                 Y: =DataCardKey8.Y
                 ZIndex: =4
+
+            RichTextEditor2 As richTextEditor:
+                Default: ="Enter some <strong>rich text</strong> here."
+                Height: =186
+                Width: =653
+                X: =225
+                Y: =5
+                ZIndex: =5
 
     Button11 As button:
         OnSelect: =Navigate(PreviewCampaign);
