--- a/app/Src/BrowseScreen1.fx.yaml
+++ b/app/Src/BrowseScreen1.fx.yaml
@@ -67,7 +67,7 @@ BrowseScreen1 As screen:
             AccessibleLabel: =Self.Tooltip
             Height: =60
             Icon: =Icon.ChevronRight
-            OnSelect: =Navigate(EditScreen1);
+            OnSelect: =Navigate(EditTemplate);
             PaddingBottom: =10
             PaddingLeft: =10
             PaddingRight: =10
