--- a/app/Src/NewScreen1.fx.yaml
+++ b/app/Src/NewScreen1.fx.yaml
@@ -324,7 +324,7 @@ NewScreen1 As screen:
                 DisplayMode: =Parent.DisplayMode
                 Height: =37
                 IsSearchable: =false
-                Items: =Choices([@NewCampaign].TemplateList)
+                Items: =Choices([@NewCampaign].Template)
                 PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                 SearchFields: =["Value"]
                 SearchItems: =[]
