--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -115,6 +115,7 @@
     "EditTemplate",
     "NewScreen1",
     "PreviewCampaign",
+    "PreviewTemplate",
     "SendOutScreen",
     "PreviewScreen",
     "SendButton"
