--- a/app/Src/EditScreen1.fx.yaml
+++ b/app/Src/EditScreen1.fx.yaml
@@ -418,7 +418,7 @@ EditScreen1 As screen:
         RadiusTopLeft: =0
         RadiusTopRight: =0
         Text: ="Preview"
-        X: =561
+        X: =934
         Y: =684
         ZIndex: =4
 
@@ -429,7 +429,7 @@ EditScreen1 As screen:
         RadiusTopLeft: =0
         RadiusTopRight: =0
         Text: ="Save"
-        X: =790
+        X: =687
         Y: =684
         ZIndex: =5
 
@@ -440,4 +440,15 @@ EditScreen1 As screen:
         X: =258
         Y: =27
         ZIndex: =9
+
+    Button12_1 As button:
+        OnSelect: =Navigate(MainScreen1);
+        RadiusBottomLeft: =0
+        RadiusBottomRight: =0
+        RadiusTopLeft: =0
+        RadiusTopRight: =0
+        Text: ="Cancel"
+        X: =441
+        Y: =684
+        ZIndex: =10
 
