--- a/app/Src/NewScreen1.fx.yaml
+++ b/app/Src/NewScreen1.fx.yaml
@@ -13,7 +13,7 @@ NewScreen1 As screen:
         ZIndex: =1
 
     Cancel As button:
-        OnSelect: =Navigate(BrowseScreen1);
+        OnSelect: =If(varTabSelected = 1, Navigate(MainScreen1), Navigate(BrowseScreen1));
         RadiusBottomLeft: =0
         RadiusBottomRight: =0
         RadiusTopLeft: =0
