--- a/app/Src/EditScreen1.fx.yaml
+++ b/app/Src/EditScreen1.fx.yaml
@@ -442,7 +442,7 @@ EditScreen1 As screen:
         ZIndex: =9
 
     Button12_1 As button:
-        OnSelect: =Navigate(MainScreen1);
+        OnSelect: =Navigate(TestMainScreen1);
         RadiusBottomLeft: =0
         RadiusBottomRight: =0
         RadiusTopLeft: =0
