--- a/app/Src/NewScreen1.fx.yaml
+++ b/app/Src/NewScreen1.fx.yaml
@@ -362,9 +362,9 @@ NewScreen1 As screen:
                 DisplayMode: =Parent.DisplayMode
                 Height: =37
                 IsSearchable: =false
-                Items: =Choices([@NewCampaign].Template)
+                Items: =Distinct(NewCampaign,Template)
                 OnSelect: |-
-                    =Patch(NewCampaign, ThisItem, {'Template': DataCardValue4});
+                    =Patch(NewCampaign, ThisItem, {'Template': DataCardValue4.Selected.Result});
                 PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                 SearchFields: =["Value"]
                 SearchItems: =[]
