--- a/app/Src/EditScreen1.fx.yaml
+++ b/app/Src/EditScreen1.fx.yaml
@@ -1,5 +1,6 @@
 EditScreen1 As screen:
-    OnVisible: =
+    OnVisible: |-
+        =UpdateContext({varShowPopup :false})
 
     EditForm1 As form:
         DataSource: =NewCampaign
@@ -412,13 +413,14 @@ EditScreen1 As screen:
                 ZIndex: =5
 
     Button11 As button:
-        OnSelect: =Navigate(PreviewCampaign);
+        OnSelect: |-
+            =UpdateContext({varShowPopup:true})
         RadiusBottomLeft: =0
         RadiusBottomRight: =0
         RadiusTopLeft: =0
         RadiusTopRight: =0
-        Text: ="Preview"
-        X: =934
+        Text: ="Delete"
+        X: =930
         Y: =684
         ZIndex: =4
 
@@ -429,7 +431,7 @@ EditScreen1 As screen:
         RadiusTopLeft: =0
         RadiusTopRight: =0
         Text: ="Save"
-        X: =687
+        X: =683
         Y: =684
         ZIndex: =5
 
@@ -451,4 +453,64 @@ EditScreen1 As screen:
         X: =441
         Y: =684
         ZIndex: =10
+
+    DeletePopup_2 As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =15
+
+        Rectangle1_3 As rectangle:
+            Fill: =RGBA(56, 96, 178, 0.7)
+            Height: =338
+            Visible: =varShowPopup
+            Width: =897
+            X: =240
+            Y: =90
+            ZIndex: =11
+
+        Button8_3 As button:
+            Fill: =RGBA(0, 134, 208, 1)
+            Height: =44
+            OnSelect: |-
+                =UpdateContext({varShowPopup:false}); Navigate(CampaignScreen);
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Cancel"
+            Visible: =varShowPopup
+            Width: =198
+            X: =704
+            Y: =338
+            ZIndex: =12
+
+        Button7_3 As button:
+            Fill: =RGBA(0, 134, 208, 1)
+            Height: =44
+            OnSelect: |-
+                =UpdateContext({varShowPopup:false}); Remove([@NewCampaign], BrowseGallery1_3.Selected); If (IsEmpty(Errors([@NewCampaign], BrowseGallery1_3.Selected)), Back())
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Delete"
+            Visible: =varShowPopup
+            Width: =198
+            X: =456
+            Y: =338
+            ZIndex: =13
+
+        Label8_2 As label:
+            Align: =Align.Center
+            Color: =RGBA(255, 255, 255, 1)
+            Height: =108
+            Size: =15
+            Text: ="Are you sure you want to delete the campaign?"
+            Visible: =varShowPopup
+            Width: =385
+            X: =490
+            Y: =173
+            ZIndex: =14
 
