--- a/app/Src/EditTemplate.fx.yaml
+++ b/app/Src/EditTemplate.fx.yaml
@@ -1,5 +1,6 @@
 EditTemplate As screen:
-    OnVisible: =
+    OnVisible: |-
+        =UpdateContext({varShowPopup :false})
 
     EditForm1_3 As form:
         DataSource: =TemplateList
@@ -140,12 +141,13 @@ EditTemplate As screen:
                 ZIndex: =5
 
     Button11_2 As button:
-        OnSelect: =Navigate(PreviewTemplate);
+        OnSelect: |-
+            =UpdateContext({varShowPopup:true})
         RadiusBottomLeft: =0
         RadiusBottomRight: =0
         RadiusTopLeft: =0
         RadiusTopRight: =0
-        Text: ="Preview"
+        Text: ="Delete"
         X: =899
         Y: =684
         ZIndex: =4
@@ -179,4 +181,64 @@ EditTemplate As screen:
         X: =429
         Y: =684
         ZIndex: =10
+
+    DeletePopup_3 As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =15
+
+        Rectangle1_4 As rectangle:
+            Fill: =RGBA(56, 96, 178, 0.7)
+            Height: =338
+            Visible: =varShowPopup
+            Width: =880
+            X: =227
+            Y: =90
+            ZIndex: =11
+
+        Button8_4 As button:
+            Fill: =RGBA(0, 134, 208, 1)
+            Height: =44
+            OnSelect: |-
+                =UpdateContext({varShowPopup:false}); Navigate(BrowseScreen1);
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Cancel"
+            Visible: =varShowPopup
+            Width: =194
+            X: =682
+            Y: =338
+            ZIndex: =12
+
+        Button7_4 As button:
+            Fill: =RGBA(0, 134, 208, 1)
+            Height: =44
+            OnSelect: |-
+                =UpdateContext({varShowPopup:false}); Remove([@TemplateList], BrowseGallery1.Selected); If (IsEmpty(Errors([@TemplateList], BrowseGallery1.Selected)), Back())
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Delete"
+            Visible: =varShowPopup
+            Width: =194
+            X: =439
+            Y: =338
+            ZIndex: =13
+
+        Label8_3 As label:
+            Align: =Align.Center
+            Color: =RGBA(255, 255, 255, 1)
+            Height: =108
+            Size: =15
+            Text: ="Are you sure you want to delete the template?"
+            Visible: =varShowPopup
+            Width: =378
+            X: =473
+            Y: =173
+            ZIndex: =14
 
