--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -117,8 +117,6 @@
     "PreviewCampaign",
     "PreviewTemplate",
     "SendOutScreen",
-    "PreviewScreen",
-    "SendButton",
-    "TestMainScreen1"
+    "ExcelScreen"
   ]
 }
