--- a/app/Src/ExcelScreen.fx.yaml
+++ b/app/Src/ExcelScreen.fx.yaml
@@ -65,28 +65,20 @@ ExcelScreen As screen:
             Y: =89
             ZIndex: =3
 
-        NextArrow2_1 As icon.ChevronRight:
-            AccessibleLabel: =Self.Tooltip
-            Height: =60
-            Icon: =Icon.ChevronRight
-            OnSelect: =Navigate(EditScreen1);
-            PaddingBottom: =10
-            PaddingLeft: =10
-            PaddingRight: =10
-            PaddingTop: =10
-            TabIndex: =0
-            Tooltip: ="View item details"
-            Width: =60
-            X: =Parent.TemplateWidth - Self.Width - 5
-            Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
-            ZIndex: =4
-
         Separator3_1 As rectangle:
             Height: =1
             OnSelect: =Select(Parent)
             Width: =Parent.TemplateWidth
             Y: =Parent.TemplateHeight - 1
             ZIndex: =5
+
+        Checkbox2_1 As checkbox:
+            Default: =ThisItem.IsSelected
+            Text: =""
+            Width: =43
+            X: =653
+            Y: =36
+            ZIndex: =6
 
     Icon2_3 As icon.ArrowsUpDown:
         Color: =RGBA(56, 96, 178, 1)
@@ -130,26 +122,15 @@ ExcelScreen As screen:
         ZIndex: =6
 
     Button6_7 As button:
-        OnSelect: =NewForm(EditForm1);Navigate(NewScreen1, ScreenTransition.None); Set(varShowForm,true)
+        OnSelect: =
         RadiusBottomLeft: =0
         RadiusBottomRight: =0
         RadiusTopLeft: =0
         RadiusTopRight: =0
-        Text: ="Create New"
-        X: =700
+        Text: ="Save"
+        X: =570
         Y: =685
         ZIndex: =7
-
-    Button6_6 As button:
-        OnSelect: =Navigate(BrowseScreen1);
-        RadiusBottomLeft: =0
-        RadiusBottomRight: =0
-        RadiusTopLeft: =0
-        RadiusTopRight: =0
-        Text: ="Template List"
-        X: =481
-        Y: =685
-        ZIndex: =8
 
     Label1_2 As label:
         FontWeight: =FontWeight.Bold
