--- a/app/Src/ExcelScreen.fx.yaml
+++ b/app/Src/ExcelScreen.fx.yaml
@@ -58,7 +58,7 @@ ExcelScreen As screen:
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.'Project'
+            Text: =ThisItem.Project
             VerticalAlign: =VerticalAlign.Top
             Width: =621
             X: =32
