--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -117,6 +117,7 @@
     "PreviewCampaign",
     "PreviewTemplate",
     "SendOutScreen",
-    "ExcelScreen"
+    "ExcelScreen",
+    "Screen1"
   ]
 }
